--- a/.shipped/build
+++ b/.shipped/build
@@ -1,6 +1,7 @@
 #!/bin/bash
 go get -d
-go get -u labix.org/v2/mgo
+go get -u gopkg.in/mgo.v2
+go get -u gopkg.in/mgo.v2/bson
 go get -u labix.org/v2/mgo/bson
 go build -o .shipped/out
 cp .shipped/out /tmp/shipped-out
